--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,6 @@
 {
   "firebase": "ironing",
+  "public": "target",
 
   "headers": [
     {
@@ -25,5 +26,5 @@
     "destination": "/index.html"
   }],
 
-  "rules": "./firebase-rules.json"
+  
 }
