--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ before_install:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+  - chmod ugo+x scripts/dist.sh
+  - chmod ugo+x scripts/deploy.sh
 
 install:
   - npm install -g firebase-tools
