--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "autoprefixer": "~6.3.2",
     "browser-sync": "~2.11.1",
     "connect-history-api-fallback": "~1.1.0",
-    "css-loader": "~0.23.1",
+    "css-loader": "^0.23.1",
     "del": "~2.2.0",
     "del-cli": "~0.2.0",
     "extract-text-webpack-plugin": "~1.0.1",
+    "file-loader": "^0.8.5",
     "gulp": "gulpjs/gulp.git#4.0",
     "gulp-tslint": "~4.3.2",
     "gulp-util": "~3.0.7",
@@ -53,7 +54,7 @@
     "raw-loader": "~0.5.1",
     "reflect-metadata": "0.1.2",
     "sass-loader": "~3.1.2",
-    "style-loader": "~0.13.0",
+    "style-loader": "^0.13.0",
     "ts-loader": "~0.8.1",
     "tslint": "~3.4.0",
     "typescript": "~1.7.5",
